fix(api-structure-preview): adjust spacing styles

--- a/src/components/APIStructurePreview.module.scss
+++ b/src/components/APIStructurePreview.module.scss
@@ -5,15 +5,15 @@
   text-decoration-line: underline;
   text-decoration-style: dotted;
   text-underline-offset: 4px;
-  margin-right: 16px;
+  margin-right: 20px;
   position: relative;
   overflow: visible;
 
   &::after {
     content: 'i';
     color: var(--tooltip-color);
-    border: 1px solid var(--tooltip-color);
-    border-radius: 20px;
+    border: 1.3px solid var(--tooltip-color);
+    border-radius: 30px;
     width: 1.6em;
     max-height: 55%; // this value should be (1 / line-height) of .markdown p (see custom.scss)
     font-size: 50%;
